# MoDeNa2

./: 404.html  README.md  TODO.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: docs.yml
architecture/: index.html
core-developer-guide/: index.html
docs/: architecture.md  core-developer-guide.md  fireworks.md  index.md  model-registry.md  quick-start-c.md  quick-start-cpp.md  quick-start-developer.md  quick-start-fortran.md  quick-start-hpc.md  quick-start-julia.md  quick-start-matlab.md  quick-start-r.md  quick-start-user.md
docs/pygments_modena/: setup.cfg
examples/MoDeNaModels/flowRate/: pyproject.toml
examples/MoDeNaModels/flowRate/python/: __init__.py  flowRate.py
examples/MoDeNaModels/idealGas/: __init__.py  config.toml  idealGas.py  pyproject.toml
examples/MoDeNaModels/twoTankMatlab/: pyproject.toml
examples/MoDeNaModels/twoTankMatlab/python/: __init__.py  twoTankMatlab.py
examples/MoDeNaModels/twoTankMatlab/src/: twoTanksMacroscopicProblemMatlab.m
examples/MoDeNaModels/twoTankPython/: pyproject.toml
examples/MoDeNaModels/twoTankPython/python/: __init__.py  twoTankPython.py
examples/multicomponentDiffusion/: README.md  modena.toml
examples/twoTanks/: README.md  modena.toml
examples/twoTanksAutoInit/: README.md  modena.toml
examples/twoTanksChained/: README.md  modena.toml
examples/twoTanksCxx/: README.md  modena.toml
examples/twoTanksFortran/: README.md  modena.toml
examples/twoTanksJulia/: README.md  modena.toml
examples/twoTanksMT/: Makefile  buildModels  initModels  modena.toml  workflow
examples/twoTanksMatlab/: README.md  modena.toml
examples/twoTanksPython/: README.md  modena.toml
examples/twoTanksR/: README.md  modena.toml
fireworks/: index.html
model-registry/: index.html
pygments_modena/: pyproject.toml
pygments_modena/modena_lexer/: __init__.py
pygments_modena/modena_lexer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
quick-start-c/: index.html
quick-start-cpp/: index.html
quick-start-developer/: index.html
quick-start-fortran/: index.html
quick-start-hpc/: index.html
quick-start-julia/: index.html
quick-start-matlab/: index.html
quick-start-r/: index.html
quick-start-user/: index.html
search/: search_index.json
src/portal/: app.py  config.py  conftest.py  run.py
src/portal/callbacks/: detail_callbacks.py  (+1 more)
src/python/: ErrorMetrics.py  Launchpad.py  Registry.py  Runner.py  Strategy.py  SurrogateModel.py  __init__.py  __main__.py  _logging.py  _paths.py.in  config_schema.py  utils.py  write_paths.py.in
src/src/: fmodena.f90  function.c  function.h  global.c  global.h  indexset.c  indexset.h  inline.h  inputsoutputs.c  inputsoutputs.h  model.c  model.h  modena.h
src/tests/: README.md
(+69 files in other folders)
