[metadata]
name = modena-lexer
version = 0.1.0
description = Pygments lexers for MoDeNa C and Python APIs

[options]
packages = modena_lexer
install_requires = pygments

[options.entry_points]
pygments.lexers =
    ModenaCLexer = modena_lexer:ModenaCLexer
    ModenaPythonLexer = modena_lexer:ModenaPythonLexer
