[build-system]
requires      = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name            = "flowRate"
version         = "1.0.0"
requires-python = ">=3.9"
dependencies    = ["modena", "fireworks", "jinja2", "blessings"]

[tool.scikit-build]
# CMake installs all files (Python + binary) to SKBUILD_PLATLIB_DIR.
# Disable automatic Python package discovery to avoid double-installation.
wheel.packages = []
