[build-system]
requires      = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name            = "idealGas"
version         = "1.0.0"
requires-python = ">=3.9"
dependencies    = ["modena"]

[tool.scikit-build]
# CMake installs all files to SKBUILD_PLATLIB_DIR.
# Disable automatic Python package discovery to avoid double-installation.
wheel.packages = []
